2011-09-07  Andreas Kupries  <andreask@activestate.com>

	* tests/bitmap.c: Added guards against negative bit ids to
	* tests/bitmap.test: 'allbut' and 'only'. Extended the
	  testsuite. Added checks to 'next' enabling generation of better
	  error messages. Updated and extended the testsuite.

	* doc/tcl-hwloc.man: Continued work, starting to flesh out the
	  bitmap methods.

2011-09-06  Andreas Kupries  <andreask@activestate.com>

	* doc/tcl-hwloc.man: Started writing a doctools based
	  manpage. Currently mainly a skeleton.

	* tests/sample.test: Removed leftovers from the sample-extension.
	* tests/tclsample.test:

	* tests/convert.tests: Renamed, to activate, and converted to a
	* tests/convert.test: proper testsuite, based on tcltest.

	* tests/cpu_node_set.tests: Renamed, to activate. PPlus marker,
	* tests/cpu_node_set.test: see below

	* tests/create.test: Added marker command to highlight the test
	* tests/cpubind.test: files which are not properly using tcltest
	* tests/version.test: as their foundation, yet.
	* tests/destroy.test:
	* tests/membind.test:

	* generic/topology.c: Typo fix, whitespace fiddling, note on
	  bitmap parsing.

	* tests/bitmap.test: Second sweep over the implementation. Moved
	* tests/bitmap.c: bitmap-from-obj into separate function, and
	  simplifed the bitmap cleanup (mostly centralized to end of main
	  function, and in set_result_bitmap). Moved cleanup of temps to
	  earliest location possible, usually immediatel after the hwloc
	  function using it. Updated a few error messages for clarity, and
	  update the testsuite.

	* generic/cpubind.c: Simplified the parsing of flags.

	* tests/bitmap.test: Completed tests for all bitmap operators.

	* tests/bitmap.test: Writing the tests for 'allbut' and 'only'
	* tests/bitmap.c: I realized that these operations are
	  unary. Because their output dependes solely on the id, and not
	  on the bitmap. Fixed that bug.

2011-09-05  Andreas Kupries  <akupries@shaw.ca>
